--- a/day7.4.html
+++ b/day7.4.html
@@ -37,7 +37,7 @@
 <input type="password" id="confirm" namw="confirm"><br><br>
 
 
-<input type="submit"  formaction="day7.html">
+<input type="submit"  formaction="index.html">
 
 
 
