--- a/day7.1.html
+++ b/day7.1.html
@@ -16,7 +16,7 @@
             <input type="password" id="password"><br><br>
              <label for="confirm">confirm Password:</label>
              <input type="password" id="confirm"><br><br>
-             <button type="submit" formaction="./index.html">Reset</button>
+             <button type="submit" formaction=".index.html">Reset</button>
 
              <button type="submit" formaction="./day7.2.html">Rules for password</button>
         </form>
